--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,10 +5,10 @@
 
 body {
   color: white;
-  background: white;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 .section5-conten-image-png::-webkit-scrollbar {
