--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-.shadow-gradient {
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(50, 50, 50, 40) 100%);
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
+* {
+    font-family: 'Kanit', sans-serif;
 }
